--- a/index.html
+++ b/index.html
@@ -106,13 +106,11 @@
 
     <!-- portfolio section starts here -->
     <section id="portfolio" class="container pb-4">
-      <!-- my-4 used to add top and bottom margin to heading -->
       <div class="row">
-        <div class="col-12 text-center my-4">
-          <!-- my-4 used to add top and bottom margin to heading -->
+        <!-- my-4 used to add top and bottom margin to heading -->
           <div class="col-12 text-center my-4">
             <h2 class="display-5">Portfolio</h2>
-
+          </div>
             <div class="col-12 col-md-6">
               <div class="card mb-3">
                 <img src="assets/images/wags-and-walks.webp" class="card-img-top"
@@ -165,24 +163,23 @@
                 </div>
               </div>
             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   </main>
+
+<!-- Contact section-->
+<footer id="contact" class="container">
+  <div class="row justify-content-center">
+    <div class="column-12 text-center my-4">
+      <h2 class="display-5">Contact</h2>
+      <p class="mt-4">Got questions or ideas? I'd love to hear from you! Whether you're interested in collaboration, have 
+        inquiries about my projects, or wish to request a copy of my CV, please don't hesitate to get in touch. I'm always 
+        open to discussing new opportunities and how we can work together to create something amazing!</p>
+    </div>
+    <div class="col-12 col-md-10 co-lg-8">
+      <!-- Add your form here-->
+    </div>
+  </div>
+</footer>
+
 
   <!-- Bootstrap Javascript link-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
