Polish Bootstrap customisation by removing rounded corners

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
         </p>
         <!-- mb-5 gives extra margin spacing under lead text -->
         <p class="lead mb-5">Let's create something amazing together!</p>
-        <button type="button" class="btn btn-primary">Subscribe to my newsletter!</button>
+        
+        <button type="button" class="btn btn-primary sharp-corners">Subscribe to my newsletter!</button>
       </div>
     </section>
   </header>
@@ -115,7 +116,7 @@
             <h2 class="display-5">Portfolio</h2>
           </div>
             <div class="col-12 col-md-6">
-              <div class="card mb-3">
+              <div class="card mb-3 sharp-corners">
                 <img src="assets/images/wags-and-walks.webp" class="card-img-top"
                   alt="A man walking several dogs early in the morning">
                 <div class="card-body">
@@ -129,7 +130,7 @@
               </div>
             </div>
             <div class="col-12 col-md-6">
-              <div class="card mb-3">
+              <div class="card mb-3 sharp-corners">
                 <img src="assets\images\we-wellness.webp" class="card-img-top"
                   alt="A spa with candles towels and natural material">
                 <div class="card-body">
@@ -142,7 +143,7 @@
               </div>
             </div>
             <div class="col-12 col-md-6">
-              <div class="card mb-3">
+              <div class="card mb-3 sharp-corners">
                 <img src="assets\images\math-wiz.webp" class="card-img-top" alt="A child practicing math at a computer">
                 <div class="card-body">
                   <h3 class="card-title">Maths-Wiz</h3>
@@ -154,7 +155,7 @@
               </div>
             </div>
             <div class="col-12 col-md-6">
-              <div class="card mb-3">
+              <div class="card mb-3 sharp-corners">
                 <img src="assets/images/bmi-calculator.webp" class="card-img-top"
                   alt="Weighing scales seen from the first person view of the person standing on the scales">
                 <div class="card-body">
@@ -180,39 +181,39 @@
     
     <div class="col-12 col-md-10 co-lg-8 mb-4">
       <!-- Add your form here-->
-      <form class="row g-3">
+      <form class="row g-3 sharp-corners">
         <div class="col-md-6">
           <label for="full-name" class="form-label">Full Name</label>
-          <input type="text" class="form-control" id="full-name">
+          <input type="text" class="form-control sharp-corners" id="full-name">
         </div>
         <div class="col-md-6">
           <label for="phonenumber" class="form-label">Phone number</label>
-          <input type="number" class="form-control" id="phonenumber">
+          <input type="number" class="form-control sharp-corners" id="phonenumber">
         </div>
         <div class="col-md-6">
           <label for="email" class="form-label">Email</label>
-          <input type="email" class="form-control" id="email">
+          <input type="email" class="form-control sharp-corners" id="email">
         </div>
       <div class="col-12">
         <label for="message" class="form-label">Message</label>
-        <textarea class="form-control" id="message" rows="3"> </textarea>
+        <textarea class="form-control sharp-corners" id="message" rows="3"> </textarea>
       </div>
       <div class="col-12">
-        <button type="submit" class="btn btn-primary">Send</button>
+        <button type="submit" class="btn btn-primary sharp-corners">Send</button>
       </div>
       </form>
     </div>
   </div>
 
   <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
+<button type="button" class="btn btn-primary sharp-corners" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Subscribe to my news letter!
 </button>
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
-    <div class="modal-content">
+    <div class="modal-content sharp-corners">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -230,7 +231,7 @@
                 <input type="email" class="form-control" id="inputEmail">
             </div>
             <div class="col-12 mb-4">
-                <button type="submit" class="btn btn-primary">
+                <button type="submit" class="btn btn-primary sharp-corners">
                     Sign up!
                 </button>
             </div>
