--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <!-- mb-5 gives extra margin spacing under lead text -->
         <p class="lead mb-5">Let's create something amazing together!</p>
         
-        <button type="button" class="btn btn-primary sharp-corners">Subscribe to my newsletter!</button>
+        <button type="button" class="btn btn-primary sharp-corners custom-button">Subscribe to my newsletter!</button>
       </div>
     </section>
   </header>
@@ -199,14 +199,14 @@
         <textarea class="form-control sharp-corners" id="message" rows="3"> </textarea>
       </div>
       <div class="col-12">
-        <button type="submit" class="btn btn-primary sharp-corners">Send</button>
+        <button type="submit" class="btn btn-primary sharp-corners custom-button">Send</button>
       </div>
       </form>
     </div>
   </div>
 
   <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary sharp-corners" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<button type="button" class="btn btn-primary sharp-corners custom-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
   Subscribe to my news letter!
 </button>
 
@@ -231,7 +231,7 @@
                 <input type="email" class="form-control" id="inputEmail">
             </div>
             <div class="col-12 mb-4">
-                <button type="submit" class="btn btn-primary sharp-corners">
+                <button type="submit" class="btn btn-primary sharp-corners custom-button">
                     Sign up!
                 </button>
             </div>
